# traceroot-sdk

./: .gitignore  .traceroot-config-local.yaml  .traceroot-config.yaml  CONTRIBUTING.md  Makefile  README.md  package-lock.json  pyproject.toml  requirements.txt  set_aws_env  setup.py
.cursor/rules/: traceroot-integration.md
.github/: CODEOWNERS
docs/: docs.json  index.mdx  quickstart.mdx
docs/essentials/: healthcare_voice_agent.mdx  journey.mdx
docs/examples/: healthcare_voice_agent.mdx  multi_code_agent.mdx
docs/sdk/: python.mdx  typescript.mdx
examples/: loop_example.py  override_example.py  simple_example.py
examples/data_app/: README.md  app.py  html.py  html_layout.py  requirements.txt
examples/healthcare_voice_agent/: README.md  __init__.py  create_input_audio.py  main.py  plan_agent.py  requirements.txt  response_agent.py  scheduling_agent.py  stt_agent.py  tts_agent.py
examples/healthcare_voice_agent/data/: doctors.json
examples/multi_code_agent/: README.md  main.py  requirements.txt  simple_server.py  simpler_server_v2.py  simpler_server_v3.py
examples/multi_code_agent/rest/: code_agent.py  main.py
examples/multi_code_agent/ui/: .traceroot-config.yaml  README.md  next.config.ts  package-lock.json  package.json  traceroot.config.ts
examples/multi_code_agent/ui/src/app/: page.tsx
examples/multi_code_agent/ui/src/app/api/code/: route.ts
examples/multi_code_agent/ui/src/types/: api.ts
integrations/: __init__.py  fastapi.py
query/: client.py
scripts/: jaeger_list_services.py  jaeger_search_trace.py
test/: test_credentials.py  test_e2e_complex.py  test_streaming_trace.py
test/credentials/: test_refresh.py
test/integ/: test_logger_integration.py
test/logger/: test_credential_lifecycle.py  test_logger.py  test_logger_init.py  test_trace_filter_fields.py
test/tracer/: test_env_vars.py  test_tracer.py  test_tracer_init.py  test_tracer_verbose.py
test/utils/: test_config.py
tests/: test_e2e.py  test_e2e_complex.py
traceroot/: __init__.py  config.py  constants.py  credentials.py  logger.py  tracer.py
traceroot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
traceroot/integrations/: fastapi.py
traceroot/utils/: config.py  io.py
